# streamline-marketplace

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.test.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_tests.rs
connector-sdk/: README.md
connector-sdk/template/: Cargo.toml
connector-sdk/template/src/: lib.rs
registry/: Cargo.toml  extensions.json  transforms.json
registry/src/: main.rs  portal.rs  security.rs  store.rs
registry/tests/: registry_integration_test.rs  registry_tests.rs
transforms/ai-classifier/: Cargo.toml  transform.toml
transforms/ai-classifier/src/: lib.rs
transforms/bigquery-sink/: Cargo.toml  transform.toml
transforms/bigquery-sink/src/: lib.rs
transforms/elasticsearch-sink/: Cargo.toml  transform.toml
transforms/elasticsearch-sink/src/: lib.rs
transforms/field-router/: Cargo.toml  transform.toml
transforms/field-router/src/: lib.rs
transforms/http-webhook-sink/: Cargo.toml  transform.toml
transforms/http-webhook-sink/src/: lib.rs
transforms/json-filter/: Cargo.toml  transform.toml
transforms/json-filter/src/: lib.rs
transforms/mongodb-sink/: Cargo.toml  transform.toml
transforms/mongodb-sink/src/: lib.rs
transforms/mysql-sink/: Cargo.toml  transform.toml
transforms/mysql-sink/src/: lib.rs
transforms/pii-redactor/: Cargo.toml  transform.toml
transforms/pii-redactor/src/: lib.rs
transforms/postgres-connector/: Cargo.toml  transform.toml
transforms/postgres-connector/src/: lib.rs
transforms/redis-sink/: Cargo.toml  transform.toml
transforms/redis-sink/src/: lib.rs
transforms/s3-sink/: Cargo.toml  transform.toml
transforms/s3-sink/src/: lib.rs
transforms/schema-validator/: Cargo.toml  transform.toml
transforms/schema-validator/src/: lib.rs
transforms/slack-sink/: Cargo.toml  transform.toml
transforms/slack-sink/src/: lib.rs
transforms/snowflake-sink/: Cargo.toml  transform.toml
transforms/snowflake-sink/src/: lib.rs
transforms/timestamp-enricher/: Cargo.toml  transform.toml
transforms/timestamp-enricher/src/: lib.rs
