[workspace]
members = [
    "cli",
    "registry",
    "transforms/json-filter",
    "transforms/timestamp-enricher",
    "transforms/pii-redactor",
    "transforms/schema-validator",
    "transforms/field-router",
    "transforms/ai-classifier",
    "transforms/s3-sink",
    "transforms/postgres-connector",
    "transforms/elasticsearch-sink",
    "transforms/http-webhook-sink",
    "transforms/redis-sink",
    "transforms/snowflake-sink",
    "transforms/bigquery-sink",
    "transforms/mongodb-sink",
    "transforms/mysql-sink",
    "transforms/slack-sink",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/streamlinelabs/streamline-marketplace"

