[package]
name = "streamline-marketplace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Streamline WASM Transform Marketplace"

[[bin]]
name = "streamline-marketplace"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart"] }
colored = "2.1"
dirs = "6.0"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
