[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "Streamline connector: {{project-name}}"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
