[package]
name = "ai-classifier"
version = "0.1.0"
edition = "2021"
description = "Classify stream messages using LLM providers"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
